fix pre wrap

--- a/src/App.css
+++ b/src/App.css
@@ -356,6 +356,7 @@ a:visited {
 
 .comment-content pre,
 .comment-content code {
+    white-space: pre-wrap;
     background-color: rgba(0, 0, 0, 0.1);
     padding: 2px 4px;
     border-radius: 3px;
